denoising autoencoder added

--- a/Autoencoders in Keras and Deep Learning.ipynb
+++ b/Autoencoders in Keras and Deep Learning.ipynb
@@ -97,7 +97,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-27T10:03:24.291549Z",
      "start_time": "2020-10-27T10:03:24.256974Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -124,7 +125,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-27T10:03:24.611699Z",
      "start_time": "2020-10-27T10:03:24.583706Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
