--- a/Autoencoders in Keras and Deep Learning.ipynb
+++ b/Autoencoders in Keras and Deep Learning.ipynb
@@ -420,7 +420,7 @@
     "z = []\n",
     "for i in range(10000):\n",
     "    z.append(testy[i])\n",
-    "    op = autoencoder.predict(np.array([test_data[i]]))\n",
+    "    op = dr_model.predict(np.array([test_data[i]]))\n",
     "    x.append(op[0][0]*10000)\n",
     "    y.append(op[0][1]*10000)"
    ]
